# odh-codeserver

./: hatch_build.py  pyproject.toml
odh_codeserver/: __init__.py
prefetch-input/code-server/lib/vscode/: package-lock.json
prefetch-input/code-server/lib/vscode/extensions/: package-lock.json
prefetch-input/code-server/lib/vscode/remote/: package-lock.json
prefetch-input/code-server/test/: package-lock.json
simple/: index.html
simple/odh-codeserver/: index.html
utils/: ms-vscode.js-debug-companion.1.1.3.vsix  ms-vscode.js-debug.1.105.0.vsix  ms-vscode.vscode-js-profile-table.1.0.10.vsix
